tests/ui/const-generics/mgca/explicit_anon_consts.stderr
error: complex const arguments must be placed inside of a `const` block
  --> $DIR/explicit_anon_consts.rs:13:57
   |
LL | type Adt4<const N: usize> = Foo<core::direct_const_arg!(1 + 1)>;
   |                                                         ^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/explicit_anon_consts.rs:21:58
   |
LL | type Arr4<const N: usize> = [(); core::direct_const_arg!(1 + 1)];
   |                                                          ^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/explicit_anon_consts.rs:30:43
   |
LL |     let _4 = [(); core::direct_const_arg!(1 + 1)];
   |                                           ^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/explicit_anon_consts.rs:45:67
   |
LL | type const ITEM4<const N: usize>: usize = core::direct_const_arg!(1 + 1);
   |                                                                   ^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/explicit_anon_consts.rs:62:49
   |
LL |     T4: Trait<ASSOC = { core::direct_const_arg!(1 + 1) }>,
   |                                                 ^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/explicit_anon_consts.rs:71:76
   |
LL | struct Default4<const N: usize, const M: usize = { core::direct_const_arg!(1 + 1) }>;
   |                                                                            ^^^^^

error: generic parameters may not be used in const operations
  --> $DIR/explicit_anon_consts.rs:42:51
   |
LL | type const ITEM3<const N: usize>: usize = const { N };
   |                                                   ^
   |
   = help: add `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: generic parameters may not be used in const operations
  --> $DIR/explicit_anon_consts.rs:60:31
   |
LL |     T3: Trait<ASSOC = const { N }>,
   |                               ^
   |
   = help: add `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: generic parameters may not be used in const operations
  --> $DIR/explicit_anon_consts.rs:69:58
   |
LL | struct Default3<const N: usize, const M: usize = const { N }>;
   |                                                          ^
   |
   = help: add `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: generic parameters may not be used in const operations
  --> $DIR/explicit_anon_consts.rs:28:27
   |
LL |     let _3 = [(); const { N }];
   |                           ^
   |
   = help: add `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: generic parameters may not be used in const operations
  --> $DIR/explicit_anon_consts.rs:33:26
   |
LL |     let _6: [(); const { N }] = todo!();
   |                          ^
   |
   = help: add `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: generic parameters may not be used in const operations
  --> $DIR/explicit_anon_consts.rs:11:41
   |
LL | type Adt3<const N: usize> = Foo<const { N }>;
   |                                         ^
   |
   = help: add `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: generic parameters may not be used in const operations
  --> $DIR/explicit_anon_consts.rs:19:42
   |
LL | type Arr3<const N: usize> = [(); const { N }];
   |                                          ^
   |
   = help: add `#![feature(generic_const_args)]` and extract the expression into a `type const` item

error: aborting due to 13 previous errors

